# solera-app

./: .dockerignore  .gitignore  README.md  cloudbuild.api.yaml  cloudbuild.web.yaml  docker-compose.yml  metadata.json  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
app/: layout.tsx  page.tsx
app/profile/: page.tsx
app/staking/: page.tsx
apps/api/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  package.json
apps/web/: .env.example  Dockerfile  middleware.ts  next.config.ts  package.json
components/common/: Cookies.tsx
components/dashboard/: MainChart.tsx  TokenList.tsx  TotalStakedMetrics.tsx  TotalUserMetrics.tsx  header.tsx  main-chart.tsx  news-read-overlay.tsx  token-list.tsx
components/layout/: Header.tsx
components/modals/: ClaimModal.tsx  ConnectModal.tsx  ConvertModal.tsx  FirstPopup.tsx  HowItWorksModal.tsx  NewsReadOverlay.tsx  StakeModal.tsx
components/profile/: ActiveStakings.tsx  Portfolio.tsx  ProfileOverview.tsx  TotalEarned.tsx  TransactionHistory.tsx
components/sidebar/: AssetInfo.tsx  LatestBlog.tsx  (+2 more)
lib/: chart-data.ts
programs/: Anchor.toml  Cargo.toml
programs/stake-pool/: Cargo.toml
programs/stake-pool/src/: lib.rs
programs/swap-node/: Cargo.toml
programs/swap-node/src/: lib.rs
scripts/: dev-orchestrator.mjs  run-anchor-command.mjs  run-rust-command.mjs  staking-program-constants.mjs  sync-staking-program-ids.mjs  validate-staking-devnet-env.mjs  validate-staking-mainnet-dry-run.mjs  validate-web-env.mjs
store/: news-store.ts  use-market-data.ts  use-user-data.ts  use-wallet.ts
(+404 files in other folders)
