[package]
name = "stake-pool"
version = "0.1.0"
edition = "2021"
description = "Solera stake-pool Anchor program scaffold"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib", "lib"]
name = "stake_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
