[package]
name = "swap-node"
version = "0.1.0"
edition = "2021"
description = "Solera swap-node Anchor program scaffold"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_node"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
